force-app/main/default/objects/Loyalty_Point_Transaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Customer Account Detail record this earn/redeem transaction belongs to.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Point Transactions</relationshipLabel>
    <relationshipName>Loyalty_Point_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>