force-app/main/default/objects/Loyalty_Point_Transaction__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free text — e.g. reason for a manual Adjustment.</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>