force-app/main/default/objects/Loyalty_Point_Transaction__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Signed — positive for Earned/Adjustment-up, negative for Redeemed/Expired/Adjustment-down.</description>
    <label>Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>