force-app/main/default/objects/Loyalty_Point_Transaction__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set for Earned and Redeemed rows. Blank for Expired/Adjustment rows with no specific order tie.</description>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Loyalty Point Transactions</relationshipLabel>
    <relationshipName>Loyalty_Point_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>