force-app/main/default/objects/Loyalty_Point_Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Defaults to the moment the transaction is created.</description>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>